--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,7 +92,15 @@ find_package(Threads REQUIRED)
 find_package(JsonCpp)
 
 ### All options defined here
-option(BUILD_LOADER "Build loader" ON)
+option(BUILD_LOADER "Build loader" OFF)
+add_library(openxr_loader SHARED IMPORTED)
+set_property(
+ TARGET
+ openxr_loader
+ PROPERTY
+ IMPORTED_LOCATION
+ /Users/nik/Projects/meta-quest-hello-xr/ovr_openxr_mobile_sdk_60.0/OpenXR/Libs/Android/${ANDROID_ABI}/${CMAKE_BUILD_TYPE}/libopenxr_loader.so
+)
 option(BUILD_ALL_EXTENSIONS "Build loader and layers with all extensions" OFF)
 option(
     BUILD_LOADER_WITH_EXCEPTION_HANDLING
